# RustSTM32Test

./: .gitmodules  Cargo.toml  README.md  gdb.ini  gdb_flash.bat  start_openocd.bat
.cargo/: config
src/: main.rs
