[package]
authors = ["Aaron Cook aarongregorycook@gmail.com"]
description = "Testing out the rust f3 packages"
name = "ruststm32test"
repository = ""
version = "0.1.0"

[dependencies.cortex-m-rt]
version = "0.5.1"

[dependencies.panic-semihosting]
version = "0.2.0"

[dependencies.cortex-m]
version = "0.5.2"

[dependencies.stm32f30x-hal]
version = "0.2.0"

[dependencies.f3]
features = ["rt"]

[profile.dev]
codegen-units = 1
