[package]
authors = ["Aaron Cook aarongregorycook@gmail.com"]
description = "Testing out the rust f3 packages"
name = "ruststm32test"
repository = ""
version = "0.1.0"

[dependencies.cortex-m-rt]
version = "0.5.0"

[dependencies.panic-semihosting]
version = "0.2.0"

[dependencies.cortex-m]
version = "0.5.0"

[dependencies.stm32f30x-hal]
version = "0.2.0"
features = ["rt"]

[dependencies.f3]
git = "https://github.com/japaric/f3.git"
version = "0.6.0"

[profile.dev]
codegen-units = 1
